Test reworked, user data code smell fixed