@@ -1,10 +1,20 @@
 package com.pbl.demo.controller.objects;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.*;
-
+import com.pbl.demo.model.food_class.FoodClass;
+import com.pbl.demo.model.food_class.FoodClassRepository;
+import com.pbl.demo.model.food_group.FoodGroup;
+import com.pbl.demo.model.food_group.FoodGroupRepository;
+import com.pbl.demo.model.food_type.FoodType;
+import com.pbl.demo.model.food_type.FoodTypeRepository;
+import com.pbl.demo.model.ingredients.Ingredients;
+import com.pbl.demo.model.ingredients.IngredientsRepository;
+import com.pbl.demo.model.restrictions.Restrictions;
+import com.pbl.demo.model.restrictions.RestrictionsRepository;
+import com.pbl.demo.model.user_data.UserData;
+import com.pbl.demo.model.user_data.UserDataRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -12,18 +22,11 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.BindingResult;
 
-import com.pbl.demo.model.food_class.*;
-import com.pbl.demo.model.food_group.*;
-import com.pbl.demo.model.food_type.*;
-import com.pbl.demo.model.ingredients.*;
-import com.pbl.demo.model.restrictions.*;
-import com.pbl.demo.model.user_data.*;
+import java.util.*;
 
 class RestrictionsControllerTest {
-
-    @InjectMocks
-    private RestrictionsController restrictionsController;
 
     @Mock
     private RestrictionsRepository restrictRepo;
@@ -43,188 +46,225 @@ class RestrictionsControllerTest {
     @Mock
     private IngredientsRepository ingredienRepo;
 
+    @Mock
+    private BindingResult bindingResult;
+
+    @InjectMocks
+    private RestrictionsController controller;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    void testGetAllRestrictions_EmptyList() {
+    void testGetAllRestrictions_NoRestrictionsFound() {
+        // Arrange
         when(restrictRepo.findAll()).thenReturn(Collections.emptyList());
 
-        ResponseEntity<List<Restrictions>> response = restrictionsController.getAllRestrictions();
+        // Act
+        ResponseEntity<List<Restrictions>> response = controller.getAllRestrictions();
 
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
-    void testGetAllRestrictions_NonEmptyList() {
-        Restrictions restriction = new Restrictions();
-        List<Restrictions> restrictions = List.of(restriction);
+    void testGetAllRestrictions_RestrictionsFound() {
+        // Arrange
+        List<Restrictions> restrictions = List.of(new Restrictions());
         when(restrictRepo.findAll()).thenReturn(restrictions);
 
-        ResponseEntity<List<Restrictions>> response = restrictionsController.getAllRestrictions();
+        // Act
+        ResponseEntity<List<Restrictions>> response = controller.getAllRestrictions();
 
+        // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(restrictions, response.getBody());
     }
 
     @Test
-    void testAddRestriction_UserNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.empty());
+    void testGetUsersByName_UserNotFound() {
+        // Arrange
+        int userID = 1;
+        when(userRepo.findById(userID)).thenReturn(Optional.empty());
 
-        Restrictions restriction = new Restrictions();
-        ResponseEntity<Restrictions> response = restrictionsController.addRestriction(1, restriction, null);
+        // Act
+        ResponseEntity<List<FoodClass>> response = controller.getUsersByName(userID);
 
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
-    void testAddRestriction_InvalidReferences() {
+    void testGetUsersByName_Success() {
+        // Arrange
+        int userID = 1;
         UserData user = new UserData();
-        FoodClass fClass = new FoodClass();
-        FoodGroup fGroup = new FoodGroup();
-        FoodType fType = new FoodType();
-        Ingredients ing = new Ingredients();
-        when(userRepo.findById(1)).thenReturn(Optional.of(user));
-        when(foodClassRepo.findById(anyInt())).thenReturn(Optional.empty());
-        when(foodGroupRepo.findById(anyInt())).thenReturn(Optional.empty());
-        when(foodTypeRepo.findById(anyInt())).thenReturn(Optional.empty());
-        when(ingredienRepo.findById(anyInt())).thenReturn(Optional.empty());
+        user.setUserID(userID);
+        List<FoodClass> foodClasses = List.of(new FoodClass());
+        List<FoodClass> foodClassList = List.of(new FoodClass());
+        when(userRepo.findById(userID)).thenReturn(Optional.of(user));
+        when(restrictRepo.findDistinctClasses(userID)).thenReturn(foodClasses);
+        when(foodClassRepo.findAll()).thenReturn(foodClassList);
 
-        Restrictions restriction = new Restrictions();
-        restriction.setFoodClass(fClass);
-        restriction.setFoodGroup(fGroup);
-        restriction.setFoodType(fType);
-        restriction.setIngredients(ing);
-        ResponseEntity<Restrictions> response = restrictionsController.addRestriction(1, restriction, null);
+        // Act
+        ResponseEntity<List<FoodClass>> response = controller.getUsersByName(userID);
 
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    }
-
-    @Test
-    void testAddRestriction_Valid() {
-        UserData user = new UserData();
-        FoodClass fClass = new FoodClass();
-        FoodGroup fGroup = new FoodGroup();
-        FoodType fType = new FoodType();
-        Ingredients ing = new Ingredients();
-
-        when(userRepo.findById(1)).thenReturn(Optional.of(user));
-        when(foodClassRepo.findById(anyInt())).thenReturn(Optional.of(fClass));
-        when(foodGroupRepo.findById(anyInt())).thenReturn(Optional.of(fGroup));
-        when(foodTypeRepo.findById(anyInt())).thenReturn(Optional.of(fType));
-        when(ingredienRepo.findById(anyInt())).thenReturn(Optional.of(ing));
-
-        Restrictions restriction = new Restrictions();
-        restriction.setFoodClass(fClass);
-        restriction.setFoodGroup(fGroup);
-        restriction.setFoodType(fType);
-        restriction.setIngredients(ing);
-        ResponseEntity<Restrictions> response = restrictionsController.addRestriction(1, restriction, null);
-
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        verify(restrictRepo, times(1)).save(restriction);
-    }
-
-    @Test
-    void testGetRestrictionsByClass_UserNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.empty());
-
-        ResponseEntity<List<FoodClass>> response = restrictionsController.getUsersByName(1);
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    }
-
-    @Test
-    void testGetRestrictionsByClass_Valid() {
-        UserData user = new UserData();
-        FoodClass foodClass = new FoodClass();
-        List<FoodClass> allFoodClasses = List.of(foodClass);
-
-        when(userRepo.findById(1)).thenReturn(Optional.of(user));
-        when(restrictRepo.findDistinctClasses(1)).thenReturn(Collections.emptyList());
-        when(foodClassRepo.findAll()).thenReturn(allFoodClasses);
-
-        ResponseEntity<List<FoodClass>> response = restrictionsController.getUsersByName(1);
-
+        // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(allFoodClasses, response.getBody());
+        assertEquals(foodClassList, response.getBody());
     }
 
     @Test
-    void testGetRestrictionsByType_UserNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.empty());
+    void testGetUsersByType_UserOrClassNotFound() {
+        // Arrange
+        int userID = 1;
+        String className = "Class";
+        when(userRepo.findById(userID)).thenReturn(Optional.empty());
 
-        ResponseEntity<List<FoodType>> response = restrictionsController.getUsersByType(1, "ClassName");
+        // Act
+        ResponseEntity<List<FoodType>> response = controller.getUsersByType(userID, className);
 
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
-    void testGetRestrictionsByType_ClassNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.of(new UserData()));
-        when(foodClassRepo.findByClassName("ClassName")).thenReturn(Optional.empty());
-
-        ResponseEntity<List<FoodType>> response = restrictionsController.getUsersByType(1, "ClassName");
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    }
-
-    @Test
-    void testGetRestrictionsByType_Valid() {
-        UserData user = new UserData();
+    void testGetUsersByType_Success() {
+        // Arrange
+        int userID = 1;
+        String className = "Class";
         FoodClass foodClass = new FoodClass();
         foodClass.setClassID(1);
-        FoodType foodType = new FoodType();
-        List<FoodType> allFoodTypes = List.of(foodType);
+        List<FoodType> foodTypes = List.of(new FoodType());
+        when(userRepo.findById(userID)).thenReturn(Optional.of(new UserData()));
+        when(foodClassRepo.findByClassName(className)).thenReturn(Optional.of(foodClass));
+        when(foodTypeRepo.findByClassID(foodClass.getClassID())).thenReturn(foodTypes);
+        when(restrictRepo.findDistinctTypeIDsByClassID(foodClass.getClassID(), userID)).thenReturn(Collections.emptyList());
 
-        when(userRepo.findById(1)).thenReturn(Optional.of(user));
-        when(foodClassRepo.findByClassName("ClassName")).thenReturn(Optional.of(foodClass));
-        when(foodTypeRepo.findByClassID(1)).thenReturn(allFoodTypes);
-        when(restrictRepo.findDistinctTypeIDsByClassID(1, 1)).thenReturn(Collections.emptyList());
+        // Act
+        ResponseEntity<List<FoodType>> response = controller.getUsersByType(userID, className);
 
-        ResponseEntity<List<FoodType>> response = restrictionsController.getUsersByType(1, "ClassName");
-
+        // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(allFoodTypes, response.getBody());
+        assertEquals(foodTypes, response.getBody());
     }
 
     @Test
-    void testGetRestrictionsByGroup_UserNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.empty());
+    void testGetUsersByGroup_UserOrTypeNotFound() {
+        // Arrange
+        int userID = 1;
+        String typeName = "Type";
+        when(userRepo.findById(userID)).thenReturn(Optional.empty());
 
-        ResponseEntity<List<FoodGroup>> response = restrictionsController.getUsersByGroup(1, "TypeName");
+        // Act
+        ResponseEntity<List<FoodGroup>> response = controller.getUsersByGroup(userID, typeName);
 
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
-    void testGetRestrictionsByGroup_TypeNotFound() {
-        when(userRepo.findById(1)).thenReturn(Optional.of(new UserData()));
-        when(foodTypeRepo.findByTypeName("TypeName")).thenReturn(Optional.empty());
-
-        ResponseEntity<List<FoodGroup>> response = restrictionsController.getUsersByGroup(1, "TypeName");
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    }
-
-    @Test
-    void testGetRestrictionsByGroup_Valid() {
-        UserData user = new UserData();
+    void testGetUsersByGroup_Success() {
+        // Arrange
+        int userID = 1;
+        String typeName = "Type";
         FoodType foodType = new FoodType();
         foodType.setTypeId(1);
-        FoodGroup foodGroup = new FoodGroup();
-        List<FoodGroup> allFoodGroups = List.of(foodGroup);
+        List<FoodGroup> foodGroups = List.of(new FoodGroup());
+        when(userRepo.findById(userID)).thenReturn(Optional.of(new UserData()));
+        when(foodTypeRepo.findByTypeName(typeName)).thenReturn(Optional.of(foodType));
+        when(foodGroupRepo.findByTypeID(foodType.getTypeId())).thenReturn(foodGroups);
+        when(restrictRepo.findDistinctGruopIDsByTypeID(foodType.getTypeId(), userID)).thenReturn(Collections.emptyList());
 
-        when(userRepo.findById(1)).thenReturn(Optional.of(user));
-        when(foodTypeRepo.findByTypeName("TypeName")).thenReturn(Optional.of(foodType));
-        when(foodGroupRepo.findByTypeID(1)).thenReturn(allFoodGroups);
-        when(restrictRepo.findDistinctGruopIDsByTypeID(1, 1)).thenReturn(Collections.emptyList());
+        // Act
+        ResponseEntity<List<FoodGroup>> response = controller.getUsersByGroup(userID, typeName);
 
-        ResponseEntity<List<FoodGroup>> response = restrictionsController.getUsersByGroup(1, "TypeName");
-
+        // Assert
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(allFoodGroups, response.getBody());
+        assertEquals(foodGroups, response.getBody());
     }
+
+    @Test
+    void testGetUsersByIngredients_UserOrGroupNotFound() {
+        // Arrange
+        int userID = 1;
+        String groupName = "Group";
+        when(userRepo.findById(userID)).thenReturn(Optional.empty());
+
+        // Act
+        ResponseEntity<List<Ingredients>> response = controller.getUsersByIngredients(userID, groupName);
+
+        // Assert
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+
+    @Test
+    void testGetUsersByIngredients_Success() {
+        // Arrange
+        int userID = 1;
+        String groupName = "Group";
+        FoodGroup foodGroup = new FoodGroup();
+        foodGroup.setGroupID(1);
+        List<Ingredients> ingredients = List.of(new Ingredients());
+        when(userRepo.findById(userID)).thenReturn(Optional.of(new UserData()));
+        when(foodGroupRepo.findByGroupName(groupName)).thenReturn(Optional.of(foodGroup));
+        when(ingredienRepo.findByGroupID(foodGroup.getGroupID())).thenReturn(ingredients);
+        when(restrictRepo.findDistinctIngredientIDsByGroupID(foodGroup.getGroupID(), userID)).thenReturn(Collections.emptyList());
+
+        // Act
+        ResponseEntity<List<Ingredients>> response = controller.getUsersByIngredients(userID, groupName);
+
+        // Assert
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(ingredients, response.getBody());
+    }
+
+    @Test
+    void testAddRestriction_InvalidRequestBody() {
+        // Arrange
+        int userID = 1;
+        Restrictions restriction = new Restrictions();
+        BindingResult result = mock(BindingResult.class);
+        when(result.hasErrors()).thenReturn(true);
+
+        // Act
+        ResponseEntity<Restrictions> response = controller.addRestriction(userID, restriction, result);
+
+        // Assert
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+    }
+
+    @Test
+    void testAddRestriction_UserNotFound() {
+        // Arrange
+        int userID = 1;
+        Restrictions restriction = new Restrictions();
+        when(userRepo.findById(userID)).thenReturn(Optional.empty());
+
+        // Act
+        ResponseEntity<Restrictions> response = controller.addRestriction(userID, restriction, mock(BindingResult.class));
+
+        // Assert
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+
+    @Test
+    void testAddRestriction_FoodComponentsNotFound() {
+        // Arrange
+        int userID = 1;
+        Restrictions restriction = new Restrictions();
+        when(userRepo.findById(userID)).thenReturn(Optional.of(new UserData()));
+        when(foodClassRepo.findById(anyInt())).thenReturn(Optional.empty());
+        when(foodTypeRepo.findById(anyInt())).thenReturn(Optional.empty());
+        when(foodGroupRepo.findById(anyInt())).thenReturn(Optional.empty());
+        when(ingredienRepo.findById(anyInt())).thenReturn(Optional.empty());
+
+        // Act
+        ResponseEntity<Restrictions> response = controller.addRestriction(userID, restriction, bindingResult);
+
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+
 }
